<resources>
    <string name="app_name">Calculator</string>

    <string name="addition_symbol">+</string>
    <string name="subtraction_symbol">-</string>
    <string name="multiplication_symbol">×</string>
    <string name="division_symbol">÷</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="point">.</string>

    <string name="delete">CLR</string>

    <string name="action_about">About</string>

    <string name="about_author">Author - Roman Vorobyov</string>
</resources>
