<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.romanv.calculator.MainActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <GridLayout
        android:id="@+id/layout_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="1"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <GridLayout
            android:id="@+id/layout_displays"
            android:layout_width="match_parent"
            android:layout_row="0"
            android:layout_rowWeight="6"
            android:rowCount="2">

            <TextView
                android:id="@+id/label_output"
                android:layout_width="match_parent"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:textAlignment="textEnd"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/label_input"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:textAlignment="textEnd"
                android:textSize="30sp" />

        </GridLayout>

        <GridLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_row="2"
            android:layout_rowWeight="4"
            android:columnCount="3"
            android:rowCount="4">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:text="@string/delete"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:text="@string/point"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:text="@string/zero"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:text="@string/nine"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:text="@string/eight"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:text="@string/seven"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:text="@string/six"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:text="@string/five"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:text="@string/four"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:text="@string/three"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:text="@string/two"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_one"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:text="@string/one"
                android:textSize="24sp"
                android:onClick="onButtonClick" />
        </GridLayout>

        <GridLayout
            android:id="@+id/layout_operators"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:columnCount="4"
            android:rowCount="1">

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:text="@string/division_symbol"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:text="@string/multiplication_symbol"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:text="@string/subtraction_symbol"
                android:textSize="24sp"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:text="@string/addition_symbol"
                android:textSize="24sp"
                android:onClick="onButtonClick" />
        </GridLayout>

    </GridLayout>
</android.support.constraint.ConstraintLayout>
